# GPU-Buddy

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build_script.sh  convert.cpp  gpuDockerfile  run_client.sh  run_proxy.sh  run_server.sh  server_script0.sh
ExtractPythonFile/: CodeExtractor.h  CodeRestorer.h
gpu1/: CMakeLists.txt  CodeExtractor.h  CodeRestorer.h  client.cpp  client_code0.py  gpu.grpc.pb.cc  gpu.grpc.pb.h  gpu.pb.cc  gpu.pb.h  gpu.proto  input.py  server.cpp
gpu_buddy/: fileshare.grpc.pb.cc  fileshare.grpc.pb.h  fileshare.pb.cc  fileshare.pb.h
protos/: fileshare.proto  gpu.proto  proxy.proto
remoteGPU/: CMakeLists.txt  CodeExtractor.h  CodeRestorer.h  cleanup_script.sh  client.cc  client.cpp  client_code0.py  client_code1.py  client_code2.py  client_code3.py  client_script0.sh  client_script1.sh  client_script2.sh  client_script3.sh  convert.cpp  gpu.grpc.pb.cc  gpu.grpc.pb.h  gpu.pb.cc  gpu.pb.h  input.py  input1.py  output.py  output0.txt  output2.txt  output3.txt  proxy.grpc.pb.cc  proxy.grpc.pb.h  proxy.pb.cc  proxy.pb.h  proxy_server.cpp  remote_gpu.grpc.pb.cc  remote_gpu.pb.cc  remote_gpu.pb.h  server.cc  server.cpp  server_code0.py  server_code1.py  server_code2.py  server_script2.sh  server_script3.sh
remoteGPU/env/: pyvenv.cfg
remoteGPU/headers/: CodeExtractor.h
